# blog.emillon.org

./: .envrc  .gitignore  .travis.yml  AssetDirectory.hs  CNAME  DiagramCompiler.hs  LICENSE.md  README.md  TikZ.hs  blog.cabal  blog.hs  blog.ml  blog.t  build.hs  cabal.config  checklinks.hs  dune  dune-project  flake.nix  index.html  posts.html  rss.xml  stack.yaml  template.mll  tests.hs
css/: bootstrap.css  default.css  extra.css  syntax.css
drafts/: 2012-04-12-adding-a-patch-to-a-debian-package.html  2012-04-12-adding-a-patch-to-a-debian-package.mdwn  2012-10-24-the-size-of-types.html  2012-10-24-the-size-of-types.lhs  2013-01-11-bring-your-own-switch.mdwn  binarydistros.html  binarydistros.mdwn  brogue.html  brogue.mdwn  closures-are-prepared-statements.html  closures-are-prepared-statements.mdwn  curlpipesh.mdwn  ddr.mdwn  default-python.mdwn  dte.html  dte.mdwn  fp.html  fp.mdwn  haskellocaml.html  haskellocaml.mdwn  jessie.mdwn  microcorruption.html  microcorruption.mdwn  mount-rclone.html  mount-rclone.mdwn  nabomamo2016.mdwn  nix-for-ocaml-users.html  nix-for-ocaml-users.mdwn  ohlife2org.html  ohlife2org.lhs  podcasts.html  podcasts.mdwn  resize.mdwn  secretsanta.mdwn  st20.lhs  typegrowth.mdwn  vcsh.html  vcsh.mdwn  yc.html  yc.mdwn
feeds/: algebra.xml  avr.xml  bot.xml  comonad.xml  conway.xml  ctf.xml  ddr.xml  debian.xml  dune.xml  emulator.xml  fuzzing.xml  hacking-days.xml  haskell.xml  lenses.xml  life.xml  linux.xml  lvm.xml  meta.xml  nabomamo.xml  nix.xml  ocaml.xml  python.xml  rails.xml  rclone.xml  secretsanta.xml  security.xml  slack.xml  stripe.xml  systemd.xml  tex.xml  tree-sitter.xml  types.xml  zsh.xml
posts/: 2011-11-11-hello-world.html  2011-11-11-hello-world.markdown  2011-11-11-hello-world.mdwn  2011-11-12-test.markdown  2011-11-21-hakyll-101.html  2011-11-21-hakyll-101.markdown  2011-11-21-hakyll-101.mdwn  2011-11-28-unicode-math-greek-symbols-you-name-it.html  2011-11-28-unicode-math-greek-symbols-you-name-it.mdwn  2011-12-14-what-s-in-an-adt.html  2011-12-14-what-s-in-an-adt.markdown  2011-12-14-what-s-in-an-adt.mdwn  2012-01-17-zsh-suffix-aliases.html  2012-01-17-zsh-suffix-aliases.markdown  2012-01-17-zsh-suffix-aliases.mdwn  2012-08-30-stripe-ctf-2.0.html  2012-08-30-stripe-ctf-2.0.mdwn  2012-10-18-comonadic-life.html  2012-10-18-comonadic-life.lhs  2012-10-24-the-size-of-types.lhs  2014-05-13-resizing-a-lvm-partition.html  2014-05-13-resizing-a-lvm-partition.mdwn  2014-05-21-making-type-inference-explode.html  2014-05-21-making-type-inference-explode.mdwn  2014-06-05-bring-your-own-switch.html  2014-06-05-bring-your-own-switch.mdwn  2014-11-21-my-part-of-work-in-debian-jessie.html  (+19 more)
(+46 files in other folders)
