name:                blog
version:             0.1.0.0
homepage:            http://blog.emillon.org
license:             AllRightsReserved
author:              Etienne Millon
maintainer:          me@emillon.org
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is:             blog.hs
  build-depends:    attoparsec,
                    base ==4.6.*,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    process ==1.1.*,
                    bytestring ==0.10.*,
                    hakyll ==4.6.*,
                    pandoc-types ==1.12.*,
                    MissingH ==1.3.*,
                    mtl ==2.1.*,
                    binary ==0.5.*,
                    diagrams-lib ==1.2.*,
                    diagrams-svg ==1.1.*,
                    lens ==4.6.*,
                    blaze-svg ==0.3.*,
                    temporary ==1.2.*,
                    unix ==2.6.*

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  build-depends:       base, process
