name:                blog
version:             0.1.0.0
homepage:            http://blog.emillon.org
license:             AllRightsReserved
author:              Etienne Millon
maintainer:          me@emillon.org
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is:             blog.hs
  build-depends:    base,
                    bytestring,
                    directory,
                    filepath,
                    hakyll,
                    MissingH,
                    mtl,
                    pandoc-types,
                    process,
                    temporary,
                    unix

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  build-depends:       base, process
