name:                blog
version:             0.1.0.0
homepage:            http://blog.emillon.org
license:             BSD3
author:              Etienne Millon
maintainer:          me@emillon.org
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is:             blog.hs
  build-depends:    base,
                    bytestring,
                    directory,
                    filepath,
                    pandoc,
                    hakyll,
                    MissingH,
                    mtl,
                    pandoc-types,
                    process,
                    temporary,
                    text,
                    unix
